# career-context

./: .gitignore  .markdownlint.yaml  .pre-commit-config.yaml  AGENTS.md  LICENSE  README.md  pyproject.toml
.github/workflows/: resume-checks.yml
config/: resume-style.yaml  resume-validation.yaml
context/: index-by-date.md  index-by-project.md  index-by-role.md  index-by-skill.md  index-by-target-role.md  index.md  profile.md
context/companies/civic-systems-group/: company.md
docs/workflows/: final-resume-review.md  ingest-career-context.md  refresh-market-guidance.md  update-resume.md
guidance/: ats-and-format-checklist.md  public-safety-rules.md  resume-best-practices.md
guidance/market-scans/: 2026-05-10-ai-platform-engineer.md  README.md
resumes/current/: Jordan_Example_Resume.docx  Jordan_Example_Resume.md
reviews/: README.md  sources.md
reviews/prompts/: _shared.md  ats-and-market-fit-review.md  confidentiality-and-public-safety-review.md  evidence-and-claim-integrity-review.md  internal-jargon-review.md  leadership-and-seniority-review.md  readability-review.md  recruiter-fit-review.md  render-and-format-review.md  structure-and-scannability-review.md  technical-credibility-review.md
tools/: build_context_indexes.py  build_resume_docx.py  check.sh  check_artifact_safety.py  check_large_files.py  check_template_safety.py  doctor.sh  export_pdf.sh  inspect_docx.py  inspect_pdf.sh  render_resume.sh  test_check_template_safety.py  validate_context.py  validate_market_scans.py  validate_resume.py  validate_review_prompts.py
(+10 files in other folders)
